# monopoly

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yaml
backend/: CMakeLists.txt  docker-compose.yaml
backend/communication/: CMakeLists.txt
backend/communication/include/communication/: AsyncEventQueue.hpp  Command.hpp  CommunicationService.hpp  Logger.hpp  NoOptLogger.hpp  SpdLogger.hpp  ThreadSafeMap.hpp
backend/communication/src/: CommunicationService.cpp
backend/data/: .clang-format  CMakeLists.txt  Dockerfile
backend/data/include/: Database.hpp  Game.hpp  GameRepository.hpp  RoomRepository.hpp
backend/data/src/: Database.cpp  GameRepository.cpp  RoomRepository.cpp  main.cpp
backend/game/: .clang-format  CMakeLists.txt  Dockerfile
backend/game/include/: GameService.hpp
backend/game/src/: GameService.cpp  main.cpp
backend/rest/: .clang-format  CMakeLists.txt  Dockerfile
backend/rest/include/: CrowLogger.hpp  GameController.hpp
backend/rest/src/: GameController.cpp  main.cpp
backend/websocket/: CMakeLists.txt  Dockerfile
backend/websocket/include/: Server.hpp
backend/websocket/src/: Server.cpp  main.cpp
docker/: docker-compose-dev.yaml  docker-compose.yaml
documentation/: Grobablauf.md  Grobes_Datenmodell.md
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/dialog/buy-property/: buy-property.component.html  buy-property.component.ts
frontend/src/app/dialog/create-game/: create-game.component.html  create-game.component.ts
frontend/src/app/dialog/overview/: overview.component.html  overview.component.scss  overview.component.ts
frontend/src/app/dialog/start-turn/: start-turn.component.html  start-turn.component.ts
frontend/src/app/model/: commands.ts  createRoom.ts  models.ts  rooms.ts
frontend/src/app/pages/lobby/: lobby.component.html  lobby.component.scss  lobby.component.ts
frontend/src/app/pages/monopoly/: field.ts  monopoly.component.html  monopoly.component.scss  monopoly.component.ts
frontend/src/app/pages/start/: start.component.html  start.component.scss  start.component.ts
frontend/src/app/service/: client.service.ts  websocket.service.ts
